Version 1.2.2:
- Uploading of logs to the developer can now be turned off in the Settings screen.
- Fixed four possible crashes: Context.getSystemService nullpointer, WindowManager$badTokenException, Calling StartActivity() from outside Activity and Long.getLongValue() on null reference
- Fixed download error messages displaying the wrong content
- Fixed Logger reporting duplicate copies of application crashes
- Moved methods of various single-method classes  to Utils

- Renamed download package to lowercase